--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 
     <!-- link css -->
-    <link rel="stylesheet" href="../Desafio 1/pages/estilos.css">
-    <title> Desafio 1 </title>
+    <link rel="stylesheet" href="../Desafio 2/css/estilos.css">
+    <title> Mi pagina de prueba </title>
     
 </head>
 
