lo que llevo hasta ahora

--- a/pages/Contacto.html
+++ b/pages/Contacto.html
@@ -90,7 +90,7 @@
       
 
     <footer>
-        <h3> todos los derechos reservados &copy;</h3>
+        <h3> Todos los derechos reservados &copy;</h3>
         <a href="#arriba"> Volver arriba </a>
     </footer>
 </body>
