agregando detalles al index

--- a/index.html
+++ b/index.html
@@ -52,14 +52,27 @@
     <main>
         <div class="container">
           <div class="image-container">
-            <img class="imagen2" src="img/descarga.jpg" alt="Foto 2">
+            <img class="imagen" src="img/descarga.jpg" alt="Foto 2">
           </div>
           <div class="text-container">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate natus aliquam nam amet vel, beatae porro possimus iusto sapiente? Enim magnam facere hic voluptate, possimus porro mollitia optio perferendis a Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit assumenda nam inventore temporibus illo suscipit ipsa dignissimos, nihil, ad deleniti omnis aut. Eveniet quam voluptatibus sit tempore vitae incidunt distinctio!</p>
+            <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate natus aliquam nam amet vel, beatae porro possimus iusto sapiente? Enim magnam facere hic voluptate, possimus porro mollitia optio perferendis a Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit assumenda nam inventore temporibus illo suscipit ipsa dignissimos, nihil, ad deleniti omnis aut. Eveniet quam voluptatibus sit tempore vitae incidunt distinctio!</p>
           </div>
         </div>
       </main>
-      
+
+      <section class="gente">
+        <div>
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+        </div>
+        <div>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus quae, eligendi fuga soluta ipsam, neque voluptas consectetur voluptatem suscipit, ratione non deserunt voluptatibus dolor deleniti. Est dignissimos magnam cumque beatae.</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore ut nisi itaque dicta cumque quos, pariatur quasi sed, optio rem debitis distinctio. Tempore cupiditate itaque culpa, maxime optio placeat! Aperiam!</p>
+        </div>
+      </section>
+
     <footer>
         <h3> Todos los derechos reservados &copy;</h3>
         <a href="#arriba"> Volver arriba </a>
