--- a/pages/Galeria de imagenes.html
+++ b/pages/Galeria de imagenes.html
@@ -17,7 +17,7 @@
 <body class="fondo">
     
     <header id="arriba">
-        <img class="logo" src="../img/starbucks-logo-1.png" alt="Pagina principal">
+        <img class="logo" src="../Desafio-2/img/starbucks-logo-1.png" alt="Pagina principal">
 
         <h1 id="h1">Mi página de prueba</h1>
           
@@ -29,19 +29,19 @@
                 <div class="collapse navbar-collapse elementos-nav" id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="../Desafio 2/index.html">Pagina principal</a>
+                            <a class="nav-link" href="../Desafio-2/index.html">Pagina principal</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../Desafio 2/pages/Galeria de imagenes.html">Galeria de imagenes</a>
+                            <a class="nav-link" href="../Desafio-2/pages/Galeria de imagenes.html">Galeria de imagenes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../Desafio 2/pages/Productos.html">Productos</a>
+                            <a class="nav-link" href="../Desafio-2/pages/Productos.html">Productos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../Desafio 2/pages/Quienes Somos.html">Quienes somos</a>
+                            <a class="nav-link" href="../Desafio-2/pages/Quienes Somos.html">Quienes somos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../Desafio 2/pages/Contacto.html">Contacto</a>
+                            <a class="nav-link" href="../Desafio-2/pages/Contacto.html">Contacto</a>
                         </li>
                     </ul>
                 </div>
