vista completa solo escritorio, sin media queries

--- a/index.html
+++ b/index.html
@@ -51,23 +51,23 @@
 
     <main>
         <div class="container">
-          <div class="image-container">
+          <div class="imagen-container">
             <img class="imagen" src="img/descarga.jpg" alt="Foto 2">
           </div>
           <div class="text-container">
-            <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate natus aliquam nam amet vel, beatae porro possimus iusto sapiente? Enim magnam facere hic voluptate, possimus porro mollitia optio perferendis a Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit assumenda nam inventore temporibus illo suscipit ipsa dignissimos, nihil, ad deleniti omnis aut. Eveniet quam voluptatibus sit tempore vitae incidunt distinctio!</p>
+            <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate natus aliquam nam amet vel, beatae porro possimus iusto sapiente? Enim magnam facere hic voluptate, possimus porro mollitia optio perferendis a Lorem ipsum dolor sit </p>
           </div>
         </div>
       </main>
 
       <section>
         <div class="gente">
-            <div class="texto-gente">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus quae, eligendi fuga soluta ipsam, neque voluptas consectetur voluptatem suscipit, ratione non deserunt voluptatibus dolor deleniti. Est dignissimos magnam cumque beatae.</p>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore ut nisi itaque dicta cumque quos, pariatur quasi sed, optio rem debitis distinctio. Tempore cupiditate itaque culpa, maxime optio placeat! Aperiam!</p>
+            <div class="contenedor-texto-gente">
+                <p class="texto-gente">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus quae, eligendi fuga soluta ipsam, neque voluptas consectetur voluptatem suscipit, ratione non deserunt voluptatibus dolor deleniti. Est dignissimos magnam cumque beatae.</p>
+                <p class="texto-gente">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore ut nisi itaque dicta cumque quos, pariatur quasi sed, optio rem debitis distinctio. Tempore cupiditate itaque culpa, maxime optio placeat! Aperiam!</p>
             </div>
 
-            <div>
+            <div class="contenedor-gente">
                 <img class="fotos-gente" src="../Desafio-2/img/bot1.webp" alt="bot1" >
                 <img class="fotos-gente" src="../Desafio-2/img/bot2.jpeg" alt="bot2" >
                 <img class="fotos-gente" src="../Desafio-2/img/bot3.jpg" alt="bot3" >
