--- a/pages/Galeria de imagenes.html
+++ b/pages/Galeria de imagenes.html
@@ -50,18 +50,15 @@
     </header>
 
     <main>
-        <div class="gallery-container">
-            <div class="gallery-row">
-                <img src="../img/descarga (1).jpg" alt="Imagen 1">
-                <img src="../img/descarga.jpg" alt="Imagen 2">
-                <img src="../img/descarga (1).jpg" alt="Imagen 3">
-            </div>
-            <div class="gallery-row">
-                <img src="../img/descarga.jpg" alt="Imagen 4">
-                <img src="../img/descarga (1).jpg" alt="Imagen 5">
-                <img src="../img/descarga.jpg" alt="Imagen 6">
-            </div>
+        <div class="containerr-galeria">
+           <img src="../img/descarga (1).jpg" alt="">
+            <img src="../img/descarga.jpg" alt="">
+            <img src="../img/descarga.jpg" alt="">
+            <img src="../img/descarga (1).jpg" alt="">
+            <img src="../img/descarga.jpg" alt="">
+            <img src="../img/descarga (1).jpg" alt=""> 
         </div>
+        
     </main>
 
     <footer>
