--- a/pages/Galeria de imagenes.html
+++ b/pages/Galeria de imagenes.html
@@ -51,12 +51,12 @@
 
     <main>
         <div class="containerr-galeria">
-           <img src="../img/descarga (1).jpg" alt="">
-            <img src="../img/descarga.jpg" alt="">
-            <img src="../img/descarga.jpg" alt="">
-            <img src="../img/descarga (1).jpg" alt="">
-            <img src="../img/descarga.jpg" alt="">
-            <img src="../img/descarga (1).jpg" alt=""> 
+           <img class="foto-galeria" src="../img/descarga (1).jpg" alt="fotos del equipo">
+            <img class="foto-galeria" src="../img/descarga.jpg" alt="fotos del equipo">
+            <img class="foto-galeria" src="../img/descarga.jpg" alt="fotos del equipo">
+            <img class="foto-galeria" src="../img/descarga (1).jpg" alt="fotos del equipo">
+            <img class="foto-galeria" src="../img/descarga.jpg" alt="fotos del equipo">
+            <img class="foto-galeria" src="../img/descarga (1).jpg" alt=""> 
         </div>
         
     </main>
